<resources>
    <string name="app_name">FragmentNavigationEdu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_chat">Ivan Pupkin</string>

    <string name="shared_transition_image">shared_transition_image</string>
    <string name="shared_transition_text">shared_transition_text</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="fragment_location_text">Select location</string>
    <string name="fragment_date_text">Select date</string>
    <string name="fragment_price_text">Select price</string>

    <string name="menu_location">Location</string>
    <string name="menu_date">Date</string>
    <string name="menu_price">Price</string>

    <string name="lorem_ipsum">Create a layout file that you\'ll later use for the content of a fragment. You also need to define a string for the contents of the fragment. The following example contains a text view to display some text</string>

    <string name="rv_item_text">Create a layout file that you\'ll later use for the content of a fragment.</string>
    <string name="title_activity_chat" translatable="false">ChatActivity</string>


</resources>
