<!-- fragment_screen_slide_page.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_content"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        android:text="@string/lorem_ipsum" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_active"
        android:text="@string/menu_location"
        android:textColor="@color/buttonActive"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_button_inactive"
        android:text="@string/menu_date"
        android:textColor="@color/buttonInactive"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_inactive"
        android:text="@string/menu_price"
        android:textColor="@color/buttonInactive"
        android:visibility="gone" />
</LinearLayout>


